# genesis-automotive-sdk

./: BETA_DEPLOYMENT_GUIDE.md  CMakeLists.txt  CODE_TRANSFER_PACKAGE.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md
.github/workflows/: ci.yml
Core/Diagnostics/: GenesisOBD2.hpp
Core/Diagnostics/scripts/: setup_repo.sh
Core/Fusion/: GenesisEKF_Ultimate.cpp  GenesisEKF_Ultimate.hpp
Core/Fusion/Platform/iOS/: SensorManager.swift
Core/Fusion/Platform/iOS/Bridge/: GenesisCoreBridge.mm
